@@ -59,6 +59,7 @@ void
 pick_and_place_parse_file_to_images (gerb_file_t *fd, gerb_image_t **topImage,
 			gerb_image_t **bottomImage);
 
-gboolean pick_and_place_check_file_type (gerb_file_t *fd);
+gboolean
+pick_and_place_check_file_type(gerb_file_t *fd, gboolean *returnFoundBinary);
 
 #endif /* PICK_AND_PLACE_H */
